Update docker-compose.yml to fix build context

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
         image: web-flask:0.1.0-dev
         container_name: web-flask-dev
         build:
-            context: ./docker/
+            context: ./
             dockerfile: Dockerfile
         ports:
             - "5001:8080"
