--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to ECS
 on:
     push:
         branches:
-            - main # 触发部署的分支
+            - dev # 触发部署的分支
 
 jobs:
     deploy:
