--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,8 @@ jobs:
                   echo "Deploying application to ECS..."
                   ssh -o StrictHostKeyChecking=no $ECS_USER@$ECS_HOST "
                     cd $(dirname $DOCKER_COMPOSE_FILE_PATH) &&
-                    git pull &&
                     docker compose -f $DOCKER_COMPOSE_FILE_PATH down &&
+                    git pull &&
+                    docker compose -f $DOCKER_COMPOSE_FILE_PATH build &&
                     docker compose -f $DOCKER_COMPOSE_FILE_PATH up -d
                   "
