--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,5 +40,8 @@ services:
             ME_CONFIG_MONGODB_ADMINUSERNAME: root
             ME_CONFIG_MONGODB_ADMINPASSWORD: password
             ME_CONFIG_MONGODB_URL: mongodb://root:password@mongo:27017/
+            ME_CONFIG_MONGODB_ENABLE_ADMIN: "true"
+            ME_CONFIG_BASICAUTH_USERNAME: admin
+            ME_CONFIG_BASICAUTH_PASSWORD: 123456
         depends_on:
             - mongo
