--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         ports:
             - "5101:8080"
         environment:
-            - DEBUG=false
+            - DEBUG=true
             - TZ=Asia/Shanghai
             - DOCKER_CONTAINER=true
         volumes:
