--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,13 @@ jobs:
                   ECS_HOST: ${{ secrets.ECS_HOST }}
                   ECS_USER: ${{ secrets.ECS_USER }}
               run: |
-                  echo "Deploying application to ECS..."
+                  echo "正在部署应用到目标服务器..."
+                  # 首先连接到跳板机，然后通过跳板机连接到目标服务器执行脚本
                   ssh -o StrictHostKeyChecking=no $ECS_USER@$ECS_HOST "
-                    ssh -p 2222 root@127.0.0.1 "cd /mnt/docker_hub/cicd && ./ziyuan77-web.sh"
+                    echo '正在通过跳板机连接到目标服务器...'
+                    ssh -o StrictHostKeyChecking=no -p 2222 root@127.0.0.1 '
+                      cd /mnt/docker_hub/cicd &&
+                      chmod +x ./ziyuan77-web.sh &&
+                      ./ziyuan77-web.sh
+                    '
                   "
